[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytx"
dynamic = ["version"]
description = "Pratical Python Library for Twitter/X API"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["twitter", "x", "twitter-api", "twitter-x-api", "twitter-api-v2", "twitter-x-api-v2", "pytx"]
authors = [
  { name = "JEdmario16", email = "jedmario068@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/pytx#readme"
Issues = "https://github.com/unknown/pytx/issues"
Source = "https://github.com/unknown/pytx"

[tool.hatch.version]
path = "src/pytx/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pytx tests}"

[tool.hatch.envs.style]
skip-install = true
detached = true
dependencies = [
  "black",
  "flake8",
  "isort",
]

[tool.hatch.envs.style.scripts]
check = [
  "black --check --diff .",
  "flake8 .",
  "isort --check-only --diff .",
]
fmt = [
  "black .",
  "isort .",
  "check",
]

[tool.hatch.envs.docs]
skip-install = true
detached = true
dependencies = [
  "mkdocs",
  "mkdocs-material",
]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build"
serve = "mkdocs serve"

[tool.coverage.run]
source_pkgs = ["pytx", "tests"]
branch = true
parallel = true
omit = [
  "src/pytx/__about__.py",
]

[tool.coverage.paths]
pytx = ["src/pytx", "*/pytx/src/pytx"]
tests = ["tests", "*/pytx/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
disallow_untyped_defs = false
disallow_incomplete_defs = false
follow_imports = "normal"
ignore_missing_imports = false
pretty = true
show_column_numbers = true
show_error_codes = true
warn_no_return = true
wanrn_unused_ignores = true
